change all mentors requests